tests/baselines/reference/collisionExportsRequireAndUninstantiatedModule(strict=true).errors.txt
collisionExportsRequireAndUninstantiatedModule.ts(6,5): error TS2322: Type 'null' is not assignable to type 'I'.
collisionExportsRequireAndUninstantiatedModule.ts(13,5): error TS2322: Type 'null' is not assignable to type 'I'.


==== collisionExportsRequireAndUninstantiatedModule.ts (2 errors) ====
    export module require { // no error 
        export interface I {
        }
    }
    export function foo(): require.I {
        return null;
        ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'I'.
    }
    export module exports { // no error
        export interface I {
        }
    }
    export function foo2(): exports.I {
        return null;
        ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'I'.
    }